--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title></title>
-</head>
-<body>
-<div id="wrap">
-
+</head><body>
+<div id="wrapper" class="col-12" >
+    <img src="pictures/NY.jpg" alt="new-york">
     <header class="col-12">
-        <img src="pictures/mango.png">
-        <nav class="col-6">
-            <ul>
+        <img src="pictures/mango.png" alt="logo" class="col-2">
+        <nav class="col-8">
+            <ul class="col-offset-8">
                 <li>ACCUEIL</li>
                 <li>DESTINATION</li>
                 <li>GALLERIE</li>
@@ -20,7 +19,7 @@
         </nav>
     </header>
     <section id="content">
-        <!--<img src="pictures/NY.jpg" alt="new-york">-->
+
         <form>
             <ul>
                 <li> <input type="button" value="Destination"></li>
@@ -34,17 +33,17 @@
             <h3>HELLO, WELCOME TO...</h3>
             <h1>NEW-YORK</h1>
             <h4>Partez a petit prix dans des destination de reves!</h4>
-        </p>
-        <section class="promo">
-            <article>Decouvrez toutes nos promotion pour echapper a l'hiver!</article>
-            <article>Super! Paris aller-retour pour seulement 500$          </article>
-            <article>Super! Hawai aller-retour pour seulement 1200$         </article>
-            <article>Super! Rome aller-retour pour seulement 800$           </article>
-        </section>
+    </section>
+
+    <section class="promo">
+        <article class="col-2 col-offset-1">Decouvrez toutes nos promotion pour echapper a l'hiver!</article>
+        <article class="col-2 col-offset-1">Super! Paris aller-retour pour seulement 500$          </article>
+        <article class="col-2 col-offset-1">Super! Hawai aller-retour pour seulement 1200$         </article>
+        <article class="col-2 col-offset-1">Super! Rome aller-retour pour seulement 800$           </article>
     </section>
 
 </div>
-<section id="white_space"></section>
+
 <footer>
     <p>Tous droits reserver MangoVoyage</p>
     <nav>
