--- a/index.html
+++ b/index.html
@@ -4,56 +4,40 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title></title>
-</head><body>
-<div id="wrapper" class="col-12" >
-    <img src="pictures/NY.jpg" alt="new-york">
-    <header class="col-12">
-        <img src="pictures/mango.png" alt="logo" class="col-2">
-        <nav class="col-8">
-            <ul class="col-offset-8">
-                <li>ACCUEIL</li>
-                <li>DESTINATION</li>
-                <li>GALLERIE</li>
-                <li>CONTACT</li>
-            </ul>
-        </nav>
-    </header>
-    <section id="content">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
 
-        <form>
-            <ul>
-                <li> <input type="button" value="Destination"></li>
-                <li> <input type="button" value="Au depart de"></li>
-                <li> <input type="button" value="De:"></li>
-                <li> <input type="button" value="A:"></li>
-                <li> <input type="submit" value="Rechercher"></li>
-            </ul>
-        </form>
-        <p>
-            <h3>HELLO, WELCOME TO...</h3>
-            <h1>NEW-YORK</h1>
-            <h4>Partez a petit prix dans des destination de reves!</h4>
-    </section>
+</head>
+<body>
 
-    <section class="promo">
-        <article class="col-2 col-offset-1">Decouvrez toutes nos promotion pour echapper a l'hiver!</article>
-        <article class="col-2 col-offset-1">Super! Paris aller-retour pour seulement 500$          </article>
-        <article class="col-2 col-offset-1">Super! Hawai aller-retour pour seulement 1200$         </article>
-        <article class="col-2 col-offset-1">Super! Rome aller-retour pour seulement 800$           </article>
-    </section>
-
-</div>
-
-<footer>
-    <p>Tous droits reserver MangoVoyage</p>
-    <nav>
+<div class="col-12">
+    <!--Begin Pattern HTML-->
+    <a href="#menu" class="menu-link">Menu</a>
+    <nav id="menu" class="col-8" role="navigation">
         <ul>
-            <li>ACCUEIL</li>
-            <li>DESTINATION</li>
-            <li>GALLERIE</li>
-            <li>CONTACT</li>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Gallerie</a></li>
+            <li><a href="#">Video</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-</footer>
+</div>
+
+<div class="Carousel-container">
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+    <figure></figure>
+</div>
+
 </body>
 </html>
+
