--- a/index.html
+++ b/index.html
@@ -4,40 +4,66 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-<div class="col-12">
-    <!--Begin Pattern HTML-->
-    <a href="#menu" class="menu-link">Menu</a>
-    <nav id="menu" class="col-8" role="navigation">
-        <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Gallerie</a></li>
-            <li><a href="#">Video</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-</div>
 
-<div class="Carousel-container">
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-    <figure></figure>
-</div>
+    <header class="col-12">
+        <a href="#">
+            <img class="logo" src="img/mango.svg">
+        </a>
+        <a href="#menu" class="menu-link">Menu</a>
+        <nav id="menu" role="navigation" class="col-5 col-t12">
+            <ul>
+                <li class="col-t12"><a href="#">Home</a></li>
+                <li class="col-t12"><a href="#">About</a></li>
+                <li class="col-t12"><a href="#">Products</a></li>
+                <li class="col-t12"><a href="#">Services</a></li>
+                <li class="col-t12"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+<section class="col-12">
+    <div class="Carousel-container">
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+        <figure></figure>
+    </div>
+</section>
+<section class="col-12 bloc">
+    <div class="col-8 col-t12">
+        <article class="col-3 col-t12">
+            <div></div>
+        </article>
+        <article class="col-3 col-t12">
+            <div></div>
+        </article>
+        <article class="col-3 col-t12">
+            <div></div>
+        </article>
+        <article class="col-3 col-t12">
+            <div></div>
+        </article>
+    </div>
+</section>
+<footer class="col-12">
+    <p>MangoVoyage</p>
+</footer>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script type="" src="main.js"></script>
 </body>
 </html>
 
