--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-
+<div class="all">
     <header class="col-12">
         <a href="#">
             <img class="logo" src="img/mango.svg">
@@ -62,6 +62,7 @@
 <footer class="col-12">
     <p>MangoVoyage</p>
 </footer>
+</div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script type="" src="main.js"></script>
 </body>
