--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
         <a href="#menu" class="menu-link">Menu</a>
         <nav id="menu" role="navigation" class="col-5 col-t12">
-            <ul>
+            <ul class="col-t12">
                 <li class="col-t12"><a href="#">Home</a></li>
                 <li class="col-t12"><a href="#">About</a></li>
                 <li class="col-t12"><a href="#">Products</a></li>
@@ -59,6 +59,7 @@
         </article>
     </div>
 </section>
+
 <footer class="col-12">
     <p>MangoVoyage</p>
 </footer>
