--- a/gallery.html
+++ b/gallery.html
@@ -3,14 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive</title>
-    <link rel="stylesheet" href="style_gallery.css">
+    <link rel="stylesheet" href="style_gallery_contact.css">
 
 </head>
 <body>
 
+<header class="col-12">
+    <a href="#">
+        <img class="logo" src="img/mango.svg">
+    </a>
+    <a href="#menu" class="menu-link">Menu</a>
+    <nav id="menu" role="navigation" class="col-5 col-t12">
+        <ul class="col-t12">
+            <li class="col-t12"><a href="#">Home</a></li>
+            <li class="col-t12"><a href="#">About</a></li>
+            <li class="col-t12"><a href="#">Products</a></li>
+            <li class="col-t12"><a href="#">Services</a></li>
+            <li class="col-t12"><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-<section>
-    <ul>
+<section class="col-12">
+    <ul >
         <li class="col-4">
             <figure><img src="pictures/pic_gallery/promo_1.jpg" alt="London">
                 <figcaption>London</figcaption>
@@ -59,6 +74,9 @@
     </ul>
 </section>
 
+<footer class="col-12">
+    <p>MangoVoyage</p>
+</footer>
 
 </body>
 </html>
