--- a/gallery.html
+++ b/gallery.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive</title>
-    <link rel="stylesheet" href="style_gallery_contact.css">
+    <link rel="stylesheet" href="style_gallery.css">
 
 </head>
 <body>
 
 
-<section class="col-12">
-    <ul >
+<section>
+    <ul>
         <li class="col-4">
             <figure><img src="pictures/pic_gallery/promo_1.jpg" alt="London">
                 <figcaption>London</figcaption>
