--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 </head>
 <body>
-
 <div class="all">
     <header class="col-12">
         <a href="#">
             <img class="logo" src="img/mango.svg">
         </a>
+
         <a href="#menu" class="menu-link">Menu</a>
         <nav id="menu" role="navigation" class="col-5 col-t12">
             <ul class="col-t12">
@@ -26,8 +26,8 @@
             </ul>
         </nav>
     </header>
-
 <section class="col-12">
+    <!--lol-->
     <div class="Carousel-container">
         <figure></figure>
         <figure></figure>
@@ -42,20 +42,31 @@
         <figure></figure>
         <figure></figure>
     </div>
+
+    <div class="room-check col-7 col-t12">
+        <div class="input col-t12">
+        <input type="text" required="" placeholder="Destination" class="form-control" name="destination">
+        <input type="text" required="" placeholder="Au depart de" class="form-control" name="destination">
+        <input type="text" required="" placeholder="De" class="form-control" name="destination">
+        <input type="text" required="" placeholder="A" class="form-control" name="destination">
+        <input type="button" required="" value="Rechercher" class="form-control" name="destination">
+        </div>
+    </div>
+
 </section>
 <section class="col-12 bloc">
     <div class="col-8 col-t12">
         <article class="col-3 col-t12">
-            <div></div>
+            <div>Hallucinant!<br>Decouvrez nos promos aller-retour</div>
         </article>
         <article class="col-3 col-t12">
-            <div></div>
+            <div>Super!<br> Aller-retour paris londres 555$</div>
         </article>
         <article class="col-3 col-t12">
-            <div></div>
+            <div>Super!<br> Aller-retour paris londres 1555$</div>
         </article>
         <article class="col-3 col-t12">
-            <div></div>
+            <div>Super!<br> Aller-retour paris londres 3555$</div>
         </article>
     </div>
 </section>
@@ -68,4 +79,5 @@
 <script type="" src="main.js"></script>
 </body>
 </html>
+
 
