--- a/gallery.html
+++ b/gallery.html
@@ -3,63 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive</title>
-    <link rel="stylesheet" href="style_gallery.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
+<div class="all">
+    <header class="col-12">
+        <a href="#">
+            <img class="logo" src="img/mango.svg">
+        </a>
 
-<section>
-    <ul>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_1.jpg" alt="London">
-                <figcaption>London</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_2.jpg" alt="US">
-                <figcaption>US</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_3.jpg" alt="Cuba">
-                <figcaption>Cuba</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_6.jpg" alt="Paris">
-                <figcaption>Paris</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_5.jpg" alt="Berlin">
-                <figcaption>Berlin</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_4.jpg" alt="New delhi">
-                <figcaption>New delhi</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_7.jpg" alt="Dubai">
-                <figcaption>Dubai</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_8.jpg" alt="Bahamas">
-                <figcaption>Bahamas</figcaption>
-            </figure>
-        </li>
-        <li class="col-4">
-            <figure><img src="pictures/pic_gallery/promo_9.jpg" alt="Rome">
-                <figcaption>Rome</figcaption>
-            </figure>
-        </li>
-    </ul>
-</section>
+        <a href="#menu" class="menu-link">Menu</a>
+        <nav id="menu" role="navigation" class="col-5 col-t12">
+            <ul class=" col-6 col-t12">
+                <li class="col-t12"><a href="index.html">Accueil</a></li>
+                <li class="col-t12"><a href="gallery.html">Galerie</a></li>
+                <li class="col-t12"><a href="">Videos</a></li>
+                <li class="col-t12"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="col-12 gal">
 
+        <div class="row">
+            <h1 class="col-4">Carnet de voyage</h1>
+            <ul class=" img">
+                <li class="col-3 col-t6">
+                    <figure class="gallerie">
+                        <img src="pictures/pic_gallery/promo_1.jpg" alt="London">
+                        <figcaption>London</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_2.jpg" alt="US">
+                        <figcaption>US</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_3.jpg" alt="Cuba">
+                        <figcaption>Cuba</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_6.jpg" alt="Paris">
+                        <figcaption>Paris</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_5.jpg" alt="Berlin">
+                        <figcaption>Berlin</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_4.jpg" alt="New delhi">
+                        <figcaption>New delhi</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_7.jpg" alt="Dubai">
+                        <figcaption>Dubai</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_8.jpg" alt="Bahamas">
+                        <figcaption>Bahamas</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_9.jpg" alt="Rome">
+                        <figcaption>Rome</figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+    </section>
+
+    <footer class="col-12">
+        <p>MangoVoyage</p>
+    </footer>
+
+</div>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script type="" src="main.js"></script>
 </body>
 </html>
 
