--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="all">
+
     <header class="col-12">
         <a href="#">
             <img class="logo" src="img/mango.svg">
@@ -17,63 +18,63 @@
 
         <a href="#menu" class="menu-link">Menu</a>
         <nav id="menu" role="navigation" class="col-5 col-t12">
-            <ul class="col-t12">
-                <li class="col-t12"><a href="#">Home</a></li>
-                <li class="col-t12"><a href="#">About</a></li>
-                <li class="col-t12"><a href="#">Products</a></li>
-                <li class="col-t12"><a href="#">Services</a></li>
-                <li class="col-t12"><a href="#">Contact</a></li>
+            <ul class="col-6 col-t12">
+                <li class="col-t12"><a href="index.html">Accueil</a></li>
+                <li class="col-t12"><a href="gallery.html">Galerie</a></li>
+                <li class="col-t12"><a href="#">Videos</a></li>
+                <li class="col-t12"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-<section class="col-12">
-    <!--lol-->
-    <div class="Carousel-container">
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-    </div>
 
-    <div class="room-check col-7 col-t12">
-        <div class="input col-t12">
-        <input type="text" required="" placeholder="Destination" class="form-control" name="destination">
-        <input type="text" required="" placeholder="Au depart de" class="form-control" name="destination">
-        <input type="text" required="" placeholder="De" class="form-control" name="destination">
-        <input type="text" required="" placeholder="A" class="form-control" name="destination">
-        <input type="button" required="" value="Rechercher" class="form-control" name="destination">
+    <section class="col-12">
+        <!--lol-->
+        <div class="Carousel-container">
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
+            <figure class="carousel"></figure>
         </div>
-    </div>
 
-</section>
-<section class="col-12 bloc">
-    <div class="col-8 col-t12">
-        <article class="col-3 col-t12">
-            <div>Hallucinant!<br>Decouvrez nos promos aller-retour</div>
-        </article>
-        <article class="col-3 col-t12">
-            <div>Super!<br> Aller-retour paris londres 555$</div>
-        </article>
-        <article class="col-3 col-t12">
-            <div>Super!<br> Aller-retour paris londres 1555$</div>
-        </article>
-        <article class="col-3 col-t12">
-            <div>Super!<br> Aller-retour paris londres 3555$</div>
-        </article>
-    </div>
-</section>
+        <div class="room-check col-7 col-t12">
+            <div class="input col-t12">
+                <input type="text" required="" placeholder="Destination" class="form-control" name="destination">
+                <input type="text" required="" placeholder="Au depart de" class="form-control" name="destination">
+                <input type="text" required="" placeholder="De" class="form-control" name="destination">
+                <input type="text" required="" placeholder="A" class="form-control" name="destination">
+                <input type="button" required="" value="Rechercher" class="form-control" name="destination">
+            </div>
+        </div>
 
-<footer class="col-12">
-    <p>MangoVoyage</p>
-</footer>
+    </section>
+    <section class="col-12 bloc">
+        <div class="col-8 col-t12">
+            <article class="col-3 col-t12">
+                <div>Hallucinant!<br>Decouvrez nos promos aller-retour</div>
+            </article>
+            <article class="col-3 col-t12">
+                <div>Super!<br> Aller-retour paris londres 555$</div>
+            </article>
+            <article class="col-3 col-t12">
+                <div>Super!<br> Aller-retour paris londres 1555$</div>
+            </article>
+            <article class="col-3 col-t12">
+                <div>Super!<br> Aller-retour paris londres 3555$</div>
+            </article>
+        </div>
+    </section>
+
+    <footer class="col-12">
+        <p>MangoVoyage</p>
+    </footer>
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script type="" src="main.js"></script>
