--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -10,7 +10,6 @@
 </head>
 
 <div class="all">
-
     <header class="col-12">
         <a href="#">
             <img class="logo" src="img/mango.svg">
@@ -18,116 +17,51 @@
 
         <a href="#menu" class="menu-link">Menu</a>
         <nav id="menu" role="navigation" class="col-5 col-t12">
-            <ul class="col-6 col-t12">
+            <ul class=" col-6 col-t12">
                 <li class="col-t12"><a href="index.html">Accueil</a></li>
                 <li class="col-t12"><a href="gallery.html">Galerie</a></li>
-                <li class="col-t12"><a href="#">Videos</a></li>
+                <li class="col-t12"><a href="video.html">Videos</a></li>
                 <li class="col-t12"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-<body>
 
-<div class="col-12 gal">
+    <section class="col-12 form">
 
-    <div class="row">
-        <h1 class="col-4">Contact</h1>
-    <div class="content ">
-        <form action="#">
+        <div class="row">
+            <h1 class="col-4">Contactez-nous</h1>
 
-
-                <div class="col-10">
-                    <input id="Field1" placeholder="Nom" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+            <form role="form">
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" class="form-control" id="email">
                 </div>
-
-
-
-                <div class="col-10">
-                    <input id="Field3" placeholder="mail" name="Field3" type="email" spellcheck="false" value="" maxlength="255" tabindex="3">
+                <div class="form-group">
+                    <label for="pwd">Password:</label>
+                    <input type="password" class="form-control" id="pwd">
                 </div>
-
-
-
-
-                <div class="col-10">
-                    <textarea id="Field4" placeholder="Message" name="Field4" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+                <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
                 </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
 
+        <br>
+        <br>
+        <br>
 
-                <fieldset>
+    </section>
 
-                    <legend id="title5" class="desc">
-                        Select a Choice
-                    </legend>
-
-                    <div>
-                        <input id="radioDefault_5" name="Field5" type="hidden" value="">
-                        <div>
-                            <input id="Field5_0" name="Field5" type="radio" value="First Choice" tabindex="5" checked="checked">
-                            <label class="choice" for="Field5_0">First Choice</label>
-                        </div>
-                        <div>
-                            <input id="Field5_1" name="Field5" type="radio" value="Second Choice" tabindex="6">
-                            <label class="choice" for="Field5_1">Second Choice</label>
-                        </div>
-                        <div>
-                            <input id="Field5_2" name="Field5" type="radio" value="Third Choice" tabindex="7">
-                            <label class="choice" for="Field5_2">Third Choice</label>
-                        </div>
-                    </div>
-
-            </div>
-
-            <div>
-                <fieldset>
-                    <legend id="title6" class="desc">
-                        Check All That Apply
-                    </legend>
-                    <div>
-                        <div>
-                            <input id="Field6" name="Field6" type="checkbox" value="First Choice" tabindex="8">
-                            <label class="choice" for="Field6">First Choice</label>
-                        </div>
-                        <div>
-                            <input id="Field7" name="Field7" type="checkbox" value="Second Choice" tabindex="9">
-                            <label class="choice" for="Field7">Second Choice</label>
-                        </div>
-                        <div>
-                            <input id="Field8" name="Field8" type="checkbox" value="Third Choice" tabindex="10">
-                            <label class="choice" for="Field8">Third Choice</label>
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
-
-            <div>
-                <label class="desc" id="title106" for="Field106">
-                    Select a Choice
-                </label>
-                <div>
-                    <select id="Field106" name="Field106" class="field select medium" tabindex="11">
-                        <option value="First Choice">First Choice</option>
-                        <option value="Second Choice">Second Choice</option>
-                        <option value="Third Choice">Third Choice</option>
-                    </select>
-                </div>
-            </div>
-
-            <div>
-                <div>
-                    <input id="saveForm" name="saveForm" type="submit" value="Submit">
-                </div>
-            </div>
-
-        </form>
-    </div>
     <footer class="col-12">
         <p>MangoVoyage</p>
     </footer>
-        </div>
-    </div>
-        </div>
-    </section>
+
+</div>
+
+
+
+
 
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
