--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <ul class="col-6 col-t12">
                 <li class="col-t12"><a href="index.html">Accueil</a></li>
                 <li class="col-t12"><a href="gallery.html">Galerie</a></li>
-                <li class="col-t12"><a href="#">Videos</a></li>
+                <li class="col-t12"><a href="video.html">Videos</a></li>
                 <li class="col-t12"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="col-12">
+    <section class="col-12 hero">
         <!--lol-->
         <div class="Carousel-container">
             <figure class="carousel"></figure>
