--- a/video.html
+++ b/video.html
@@ -29,16 +29,23 @@
     <section class="col-12 gal">
 
         <div class="row">
-            <h1 class="col-4">Carnet de voyage</h1>
+            <h1 class="col-4">Videos</h1>
             <ul class=" img">
                 <li class="col-3 col-t6">
                     <figure class="gallerie">
-                        <img src="pictures/pic_gallery/promo_1.jpg" alt="London">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/PSTh80Aybjs' frameborder='0'
+                                    id="London" allowfullscreen></iframe>
+                        </div>
                         <figcaption>London</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_2.jpg" alt="US">
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/DaS8M6LVBhQ' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption>US</figcaption>
                     </figure>
                 </li>
