--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <div class="all">
 
     <header class="col-12">
-        <a href="#">
+        <a href="index.html" >
             <img class="logo" src="img/mango.svg">
         </a>
 
         <a href="#menu" class="menu-link">Menu</a>
-        <nav id="menu" role="navigation" class="col-5 col-t12">
+        <nav id="menu" role="navigation" class="col-3 col-t12">
             <ul class="col-6 col-t12">
                 <li class="col-t12"><a href="index.html">Accueil</a></li>
                 <li class="col-t12"><a href="gallery.html">Galerie</a></li>
@@ -28,8 +28,10 @@
     </header>
 
     <section class="col-12 hero">
+
         <!--lol-->
         <div class="Carousel-container">
+
             <figure class="carousel"></figure>
             <figure class="carousel"></figure>
             <figure class="carousel"></figure>
@@ -44,7 +46,7 @@
             <figure class="carousel"></figure>
         </div>
 
-        <div class="room-check col-7 col-t12">
+        <div class="room-check col-6 col-t12">
             <div class="input col-t12">
                 <input type="text" required="" placeholder="Destination" class="form-control" name="destination">
                 <input type="text" required="" placeholder="Au depart de" class="form-control" name="destination">
@@ -55,6 +57,7 @@
         </div>
 
     </section>
+
     <section class="col-12 bloc">
         <div class="col-8 col-t12">
             <article class="col-3 col-t12">
