--- a/video.html
+++ b/video.html
@@ -16,8 +16,8 @@
         </a>
 
         <a href="#menu" class="menu-link">Menu</a>
-        <nav id="menu" role="navigation" class="col-5 col-t12">
-            <ul class=" col-6 col-t12">
+        <nav id="menu" role="navigation" class="col-3 col-t12">
+            <ul class="col-6 col-t12">
                 <li class="col-t12"><a href="index.html">Accueil</a></li>
                 <li class="col-t12"><a href="gallery.html">Galerie</a></li>
                 <li class="col-t12"><a href="video.html">Videos</a></li>
@@ -35,53 +35,53 @@
                     <figure class="gallerie">
                         <div class='embed-container'>
                             <iframe src='https://www.youtube.com/embed/PSTh80Aybjs' frameborder='0'
-                                    id="London" allowfullscreen></iframe>
+                                    allowfullscreen></iframe>
                         </div>
-                        <figcaption>London</figcaption>
+                        <figcaption id="london">London</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
                     <figure class="gallerie">
                         <div class='embed-container'>
-                            <iframe src='https://www.youtube.com/embed/DaS8M6LVBhQ' frameborder='0'
-                                    allowfullscreen></iframe>
+                            <iframe src='https://www.youtube.com/embed/DaS8M6LVBhQ' frameborder='0' allowfullscreen></iframe>
                         </div>
-                        <figcaption>US</figcaption>
+                        <figcaption id="usa">US</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_3.jpg" alt="Cuba">
-                        <figcaption>Cuba</figcaption>
+                    <figure class="gallerie"><div class='embed-container'>
+                        <iframe src='https://www.youtube.com/embed/6AXjR7GH-wk' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="cuba">Cuba</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_6.jpg" alt="Paris">
-                        <figcaption>Paris</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/251k-zflqm8' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="paris">Paris</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_5.jpg" alt="Berlin">
-                        <figcaption>Berlin</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/y1UarPueBBM' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="berlin">Berlin</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_4.jpg" alt="New delhi">
-                        <figcaption>New delhi</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/SGtRK_H_HNg' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="new-dehli">New delhi</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_7.jpg" alt="Dubai">
-                        <figcaption>Dubai</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/3gQw-8Iu-8k' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="dubai">Dubai</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_8.jpg" alt="Bahamas">
-                        <figcaption>Bahamas</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/vxb-wLC-ZCY' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="bahamas">Bahamas</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_9.jpg" alt="Rome">
-                        <figcaption>Rome</figcaption>
+                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/A-3CYpiFJ7I' frameborder='0' allowfullscreen></iframe></div>
+                        <figcaption id="rome">Rome</figcaption>
                     </figure>
                 </li>
             </ul>
