--- a/video.html
+++ b/video.html
@@ -43,44 +43,72 @@
                 <li class="col-3 col-t6">
                     <figure class="gallerie">
                         <div class='embed-container'>
-                            <iframe src='https://www.youtube.com/embed/DaS8M6LVBhQ' frameborder='0' allowfullscreen></iframe>
+                            <iframe src='https://www.youtube.com/embed/DaS8M6LVBhQ' frameborder='0'
+                                    allowfullscreen></iframe>
                         </div>
                         <figcaption id="usa">US</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'>
-                        <iframe src='https://www.youtube.com/embed/6AXjR7GH-wk' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/6AXjR7GH-wk' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="cuba">Cuba</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/251k-zflqm8' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/251k-zflqm8' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="paris">Paris</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/y1UarPueBBM' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/y1UarPueBBM' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="berlin">Berlin</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/SGtRK_H_HNg' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/SGtRK_H_HNg' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="new-dehli">New delhi</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/3gQw-8Iu-8k' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/3gQw-8Iu-8k' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="dubai">Dubai</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/vxb-wLC-ZCY' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/vxb-wLC-ZCY' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="bahamas">Bahamas</figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
-                    <figure class="gallerie"><div class='embed-container'><iframe src='https://www.youtube.com/embed/A-3CYpiFJ7I' frameborder='0' allowfullscreen></iframe></div>
+                    <figure class="gallerie">
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed/A-3CYpiFJ7I' frameborder='0'
+                                    allowfullscreen></iframe>
+                        </div>
                         <figcaption id="rome">Rome</figcaption>
                     </figure>
                 </li>
