--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
                 <li class="col-3 col-t6">
                     <figure class="gallerie">
                         <img src="pictures/pic_gallery/promo_1.jpg" alt="London">
-                        <figcaption>London</figcaption>
+                        <figcaption><p class="text">London</p></figcaption>
                     </figure>
                 </li>
                 <li class="col-3 col-t6">
@@ -77,6 +77,23 @@
                         <figcaption>Rome</figcaption>
                     </figure>
                 </li>
+
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_2.jpg" alt="US">
+                        <figcaption>US</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_3.jpg" alt="Cuba">
+                        <figcaption>Cuba</figcaption>
+                    </figure>
+                </li>
+                <li class="col-3 col-t6">
+                    <figure class="gallerie"><img src="pictures/pic_gallery/promo_6.jpg" alt="Paris">
+                        <figcaption>Paris</figcaption>
+                    </figure>
+                </li>
+
             </ul>
         </div>
 
