--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 <div class="all">
     <header class="col-12">
         <a href="#">
-            <img class="logo" src="img/mango.svg">
+            <img class="logo" src="img/mango.svg" alt="logo">
         </a>
 
         <a href="#menu" class="menu-link">Menu</a>
